Native Core integration for desktop target (#544)